# innit

./: pyproject.toml  readme.md
innit/: __init__.py  __main__.py
innit/data/: pyproject.toml
